# cqcpp_dice_maid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  app.json  app_id.txt  cpp.hint
resources/: madness.txt  maid.txt  manual.txt  tarot.txt
src/: dice_maid.cpp
src/dice_maid/: common.cpp  common.h  dice.cpp  dice.h  fortune.cpp  fortune.h  madness.cpp  madness.h  maid.cpp  maid.h  tarot.cpp  tarot.h
